--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 <body>
   <div class="flex gap-1">
     <a href="#" class="btn btn-sm">Label</a>
-    <a href="#" class="btn btn-md">Label</a>
+    <a href=""></a>
+    <span href="#" class="btn btn-md">Label</span>
     <button class="btn btn-lg">Label</button>
+  </div>
+
+ 
+    
   </div>
 </body>
 </html>
